--- a/public/.htaccess
+++ b/public/.htaccess
@@ -21,3 +21,9 @@
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
+
+php_flag file_uploads on 
+php_value post_max_size "200M" 
+php_value upload_max_filesize "200M" 
+php_value max_input_time "300" 
+php_value memory_limit "64M"
